force-app/main/default/objects/Form__c/fields/All_Field_Focus__c.field-meta.xml
<CustomField>
    <fullName>All_Field_Focus__c</fullName>
    <label>All_Field_Focus</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>