force-app/main/default/objects/Form__c/fields/Button_CSS__c.field-meta.xml
<CustomField>
    <fullName>Button_CSS__c</fullName>
    <label>Button_CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>