force-app/main/default/objects/Form__c/fields/Button_Position__c.field-meta.xml
<CustomField>
    <fullName>Button_Position__c</fullName>
    <label>Button_Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>