force-app/main/default/objects/Form__c/fields/Captcha_Type__c.field-meta.xml
<CustomField>
    <fullName>Captcha_Type__c</fullName>
    <label>Captcha_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal_Captcha</fullName>
                <label>Normal Captcha</label>
            </value>
            <value>
                <fullName>Normal_Captcha_In_Popup</fullName>
                <label>Normal Captcha In Popup</label>
            </value>
            <value>
                <fullName>Maths_Captcha</fullName>
                <label>Maths Captcha</label>
            </value>
            <value>
                <fullName>Slider_Captcha</fullName>
                <label>Slider Captcha</label>
            </value>
            <value>
                <fullName>Image_Captcha</fullName>
                <label>Image Captcha</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>