force-app/main/default/objects/Form__c/fields/Form_Description__c.field-meta.xml
<CustomField>
    <fullName>Form_Description__c</fullName>
    <label>Form_Description</label>
    <length>32786</length>
    <type>LongTextArea</type>
</CustomField>