force-app/main/default/objects/Form__c/fields/Form_Published_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_Published_URL__c</fullName>
    <description>URL generated when the form gets published.</description>
    <label>Form Published URL</label>
    <type>Url</type>
</CustomField>