force-app/main/default/objects/Form__c/fields/Form_Styling__c.field-meta.xml
<CustomField>
    <fullName>Form_Styling__c</fullName>
    <label>Form_Styling</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>