force-app/main/default/objects/Form__c/fields/FormBgID__c.field-meta.xml
<CustomField>
    <fullName>FormBgID__c</fullName>
    <label>FormBgID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>