force-app/main/default/objects/Form__c/fields/Label_CSS__c.field-meta.xml
<CustomField>
    <fullName>Label_CSS__c</fullName>
    <label>Label_CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>