force-app/main/default/objects/Form__c/fields/Mapped_Objects__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Objects__c</fullName>
    <label>Mapped_Objects</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>