force-app/main/default/objects/Form__c/fields/Page_CSS__c.field-meta.xml
<CustomField>
    <fullName>Page_CSS__c</fullName>
    <label>Page_CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>