force-app/main/default/objects/Form__c/fields/PageBgID__c.field-meta.xml
<CustomField>
    <fullName>PageBgID__c</fullName>
    <label>PageBgID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>