force-app/main/default/objects/Form__c/fields/Progress_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Progress_Indicator__c</fullName>
    <label>Progress_Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Page_Count</fullName>
                <label>Page Count</label>
            </value>
            <value>
                <fullName>Progress_Bar</fullName>
                <label>Progress Bar</label>
            </value>
            <value>
                <fullName>Standard_Steps</fullName>
                <label>Standard Steps</label>
            </value>
            <value>
                <fullName>Custom_Steps</fullName>
                <label>Custom Steps</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>