force-app/main/default/objects/Form__c/fields/Total_Submissions__c.field-meta.xml
<CustomField>
    <fullName>Total_Submissions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total_Submissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>